--- a/index.html
+++ b/index.html
@@ -2,12 +2,32 @@
 <html lang="fa">
 
 <head>
+<!-- Primary Meta Tags -->
+<title>ماشین حساب آنلاین</title>
+<meta name="title" content="ماشین حساب آنلاین">
+<meta name="description" content="ماشین حساب  آنلاین عملیاتهای ساده و علمی و مهندسی ، درصد ، توان ، رادیکال ، کسر ، عدد تصادفی ، توابع مثلثاتی و هذلولی ، عدد مختلط">
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://calculator-destroytiger.netlify.app/">
+<meta property="og:title" content="ماشین حساب آنلاین">
+<meta property="og:description" content="ماشین حساب  آنلاین عملیاتهای ساده و علمی و مهندسی ، درصد ، توان ، رادیکال ، کسر ، عدد تصادفی ، توابع مثلثاتی و هذلولی ، عدد مختلط">
+<meta property="og:image" content="https://calculator-destroytiger.netlify.app/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image">
+<meta property="twitter:url" content="https://calculator-destroytiger.netlify.app/">
+<meta property="twitter:title" content="ماشین حساب آنلاین">
+<meta property="twitter:description" content="ماشین حساب  آنلاین عملیاتهای ساده و علمی و مهندسی ، درصد ، توان ، رادیکال ، کسر ، عدد تصادفی ، توابع مثلثاتی و هذلولی ، عدد مختلط">
+<meta property="twitter:image" content="https://calculator-destroytiger.netlify.app/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
+
+
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="File/Favicon.png" type="image/x-icon">
-    <title>ماشین حساب</title>
 </head>
 
 <body>
