--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
 <!-- Primary Meta Tags -->
 <title>ماشین حساب آنلاین</title>
+<meta name="theme-color" content="#d88819">
 <meta name="title" content="ماشین حساب آنلاین">
 <meta name="description" content="ماشین حساب  آنلاین عملیاتهای ساده و علمی و مهندسی ، درصد ، توان ، رادیکال ، کسر ، عدد تصادفی ، توابع مثلثاتی و هذلولی ، عدد مختلط">
 
